<resources>
    <string name="app_name">Tourist Guide</string>
    <string name="welcome_tourist_guide">Welcome To\n
    My Personal Chef</string>
    <string name="a_food_experience_in_telangana_is_also_something_to_look_forward_to_when_visiting_this_south_indian_state">A food Experience in Telangana is also something to look forward to when visiting this south indian state</string>
    <string name="button">Golconda Fort</string>
    <string name="charminar">Charminar</string>
    <string name="t2">CHARMINAR</string>
    <string name="t3">historic monument located at the heart of Hyderabad, west-central Telangana state, south-central India. The city, which is the capital of both Telangana and Andhra Pradesh states, was also the capital of the historic princely state of Hyderabad.
        The monument was built in 1591 by Muḥammad Qulī Quṭb Shah, the fifth king of the Quṭb Shāhī dynasty, reportedly as the first building in Hyderabad, his new capital. Over the years, it has become a signature monument to and an iconic symbol of the city’s heritage. According to one legend, the Hyderabad region was reeling from a devastating plague at the time that Muḥammad Qulī Quṭb Shah was shifting his capital from nearby Golconda to the new city. He commemorated the end of the plague by building a mosque, which became known as Charminar because of its four towering and distinctive minarets, one on each of the building’s four corners. It formed the centrepiece around which Hyderabad was planned.
   </string>
    <string name="t4"> Now regarded as one of the supreme architectural achievements of the Quṭb Shāhī period, the Charminar is a grand architectural composition in Indo-Saracenic style. It is built of granite and lime mortar with stucco ornamentation. The square structure measures 66 feet (20 metres) to a side. Each side faces one of the cardinal directions and has a pointed arch that is 36 feet (11 metres) wide at the base and reaches 66 feet high at its apex. A multisided column rises on each corner of the structure and, atop a lotus-leaf base, continues upward until it culminates in a minaret with a dome-shaped roof 160 feet (49 metres) above the ground. Each minaret is accessed via a spiral staircase on its interior wall and consists of four levels, each of which features a delicately colonnaded covered walkway around the exterior wall. Above the arches of the main structure are two stories. The first was once used as a madrasah (Islamic college) in the Quṭb Shāhī era, and the second houses a small mosque. In addition to the mosque, the Charminar has 45 other prayer areas. The Charminar’s roof and minarets afford panoramic views of Hyderabad, notably the historic Golconda Fort to the west and the bustling Lad Bazaar—adjacent to the Charminar—which is famed for its traditional lacquer bangles studded with coloured glass and stones.</string>
    <string name="t5">CLICK the button to show Directions
    </string>
    <string name="t6">Near By Places you Must Visit</string>
    <string name="t7">CLICK the button to show Directions</string>
    <string name="t9">MACCA MASJID</string>
    <string name="t10">Makkah Masjid or Mecca Masjid, is a congregational mosque in Hyderabad, India. It is one of the largest mosques in India with a capacity of 10,000 people. The mosque was built during the 17th century, and is a state-protected monument.</string>
    <string name="t11">Click Here to get the Directions </string>
    <string name="t12">PURANI HAVELI</string>
    <string name="t14">Purani Haveli one of the popular tourist spots in Hyderabad was later acquired by Asaf Jah II, the second Nizam of Hyderabad in 18th century who renovated the palace and designated the same to his son Sikandar Jah, the third Nizam of Hyderabad. Later Shikandar Jah moved to the Khilaurat complex. From then on, the place has been popularly known as Purani Haveli, which literally means ‘Old Palace’. In 19th century, the sixth Nizam of Hyderabad Nawab Mir Mahboob Ali Khan Siddiqi again made this place as his official residence. It was then the glory and grandeur of past was returned to Purani Haveli.</string>
    <string name="t15">Here are some best hotels for you</string>
    <string name="t16">HOTEL CHARMINAR</string>
    <string name="textview">FabHotel Mansingh Begum Bazar Road</string>
    <string name="t18">Guides available near Charminar</string>
    <string name="it">Hyderabad City Tourist Guide</string>
    <string name="gt">GOLCONDA FORT</string>
    <string name="gt1">HISTORY-</string>
    <string name="gt2">Founded in the approximately 12th Century by the Kakatiya Kings, this massive Golconda Fort with eight gates and 87 bastions was later built by Qutub Shahi Kings.

The name Golconda Fort has a legend behind it. As per the story, a shepherd boy was once walking on this hill when he had come across a God idol. The news about the shepherd boy and his findings reached the then ruler of Kakatiya Dynasty. The King then decided to built a fort on the hill, which then came to be known as Golconda (Shepherd’s Hill) Fort.

However, almost 200 years later, the fort came under Bahamani rulers. Later Qutub Shahi Kings took the fort under their control and extended it further. The fort was fortified and expanded during the reign of Bahamani rulers and Qutub Shahi Dynasty. Later in 1687, this fort came under the rule of Mughal emperor Aurangzeb. It was then the fort was left unattended.

At present, the Golconda Fort constitutes a complex layout of palaces, mosques and pavilion, all of which unfortunately are in ruins now.

It is said that Golconda used to be a famous diamond market attracting merchants from all over the world. It was at Golconda that the famous Kohinoor and Hope diamonds along with others such as The Regent Diamond, Darya-e Nur, Nur-Ul-Ain Diamond were stored.
</string>
    <string name="gt3">
ARCHITECTURE-</string>
    <string name="gt4">With perimeters of around 11 kilometers, the fort has 15 to 18 foot high walls. It has huge gates that have pointed iron spikes on them. This protected the fort from Elephants damaging the fort as well as enemy attacks. Golconda fort presents a mesmerizing architecture which will astonish you at each and every step. This fort has been built on a granite rock with a height of 12 meters. Huge rampart around the golconda fort was built, a glimpse of which can still be seen.

The system of acoustics in the Fort is something which attracts each and every visitor. The sound of clapping at the entrance can be heard at the Bala Hissar which is the highest point and almost a kilometre away. This system was apparently used for communication purposes, especially to alert royal in case of any attack.

Other attractive features of the Fort include water supply system which does leave many marvelling at the advancement of the technical and scientific knowledge while constructing this fort. Another popular aspect is the Rahban cannon.

Ramdas’ prison is one of the popular spots inside the fort. According to legend, Ramdas who was a revenue collector in Abdul Hasan Shahs court was imprisoned. During his imprisonment, he carved Hindu deities on the wall of his cell. One can see many carvings of Hindu Lord Hanuman on the wall, which are now smeared with holy vermillion. A holy lamp or two (diyas) is also kept lit in front of the carvings.

The main entrance of the fort is named Fatesh Darwaza, which means Victory Gate in english. It was named after Aurangzeb’s army had entered the fort through this gate. Not just for the victory procession of his army, this gate is also attracts visitors with its marvelous acoustics.

Showcasing an architectural excellence, this gate has been built in such a way that if one claps at a certain point of the entrance, then the sound of clapping can be heard at the top most pavillion. Another attractive feature of Golconda Fort is the 80 feet tree which is said to be more than 800 years old.

The fort also consists of many mounted cannons and drawbridges. Huge halls, mosques, eight gateways, and stables add on to the immense enormity of its magnificent architecture. There is speculation that a secretive tunnel starts from Durbar hall and ends at the foot of the hill. It is believed to be a secret passage to escape in case of any attack. However, no such passage has been found till date.
</string>
    <string name="gt5">CLick here to Get Directions</string>
    <string name="gt6">Near by places you must visit</string>
    <string name="gt8">NTR is considered as one of the expensive gardens of India which is spread in an area of around 55 acres. The garden has the memorial of Late NT Rama Rao. The garden is situated near Hussain Sagar lake. It has shrubs, trees, flowers, and various other types of plants which increases its attractiveness.</string>
    <string name="gt9">Chowmahalla Palace
</string>
    <string name="gt10">Chowmahalla palace was the seat of Asif Jahi dynasty and was the residence of Nizams of Hyderabad. The construction of the palace was started by Salabat Khan in 1750 and was completed by Afzalad Dawlah in between 1857 and 1869. There are two courtyards in the palace. Along with this, the palace also has darbar hall, fountains, and gardens.

</string>
    <string name="gt11">Near by Hotels and Restaurants</string>
    <string name="gt12">Green Bawarchi Restaurant</string>
    <string name="di">
        1.	3 cup sona masuri rice\n
2.	½ tsp methi / fenugreek seeds\n
3.	water (for soaking)\n
4.	1 cup urad dal\n
5.	2 tbsp toor dal\n
6.	2 tbsp chana dal\n
7.	1 cup poha / avalakki (rinsed)\n

    </string>
    <string name="du">1.firstly, in a large bowl take 3 cup sona masuri rice and ½ tsp methi. \n
2.	rinse well and soak in enough water for 4 hours.\n
3.	in another bowl take 1 cup urad dal, 2 tbsp toor dal and 2 tbsp chana dal.\n
4.	rinse well and soak in enough water for 2 hours.\n
5.	after soaking dal for 2 hours, drain off the water and transfer to the grinder. you can also grind in mixi if you do not have access to a grinder.\n
6.	add water as required and blend to smooth paste.\n
7.	scrape sides. the smooth and fluffy batter will be ready after 40 minutes.\n
8.	transfer the batter to a large vessel and keep aside.\n
9.	in the same grinder add soaked rice and 1 cup rinsed poha.\n
10.	add water slowly and scrape the sides. blend to a coarse paste.\n
11.	transfer the rice batter to the same urad dal batter.\n
12.	mix well making sure everything is well combined.\n
13.	ferment in a warm place for at least 8 hours or until the batter doubles in volume. if you are living in a cold climate, then you can place the batter in the warm oven (just heat the oven until it turns slightly warm and then turn off) to ferment.\n
14.	once the batter is well fermented, mix gently, without disturbing the air pockets.\n
15.	transfer 4 cups of fermented batter to a small bowl and add 1 tsp salt.\n
16.	mix well until the salt is well combined. masala dosa batter is ready. keep aside.\n
</string>
    <string name="epp">1.Dosa pan\n
2.Electric mixer\n</string>
    <string name="njr">1.	Calories: 40kcal\n
2.	Carbohydrates: 6g\n
3.	Protein: 2g\n
4.	Fat: 1g\n
5.	Saturated Fat: 1g\n
6.	Sodium: 81mg\n
7.	Potassium: 20mg\n
8.	Fiber: 2g\n
9.	Sugar: 1g\n
10.	Vitamin A: 36IU\n
11.	Vitamin C: 6mg\n
12.	Calcium: 9mgI\n
13.	ron: 1mg \n
</string>
</resources>